<resources>
    <string name="app_name">TugasBangkitFundamental1</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="hint_search">Cari user github</string>
    <string name="setting">Setting</string>
    <string name="detail_user">Detail User</string>
    <string name="nama">Nama</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="network_error">Network Error</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">data tidak ditemukan</string>
</resources>